# pinetime-rust-mcuboot

./: Cargo.toml  README.md  TODO  imgtool notes  link.x  mcuboot.x  memory.x
.cargo/: config
firmware/: Cargo.toml
firmware/.cargo/: config
src/: main.rs
xtask/: Cargo.toml  adafruit-nrfutil_notes.md  imgtool_notes.md
xtask/src/: build.rs  main.rs
