[package]
name = "firmware"
version = "0.0.0"
authors = ["Andres O. Vela", "David Boles"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
nrf52832-hal = { version = "0.14", features = ["rt"] }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
