[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "3", features = ["derive"] }
cargo_metadata = "0.14"
object = "0.28"
sha2 = "0.10"
elf-utilities = "0.2"
